--- a/roxie/ccd/CMakeLists.txt
+++ b/roxie/ccd/CMakeLists.txt
@@ -125,4 +125,11 @@ IF (USE_TBBMALLOC)
    target_link_libraries ( ccd ${TBBMALLOC_LIBRARIES})
 ENDIF()
 
+if (ELASTIC_DATA_DOWNLOAD_ALL)
+  ADD_DEFINITIONS( -DELASTIC_DATA_DOWNLOAD_ALL )
+endif()
+if (ELASTIC_DATA_DOWNLOAD_NONE)
+  ADD_DEFINITIONS( -DELASTIC_DATA_DOWNLOAD_NONE )
+endif()
+
 
