Enable dynamic data loading.
1. The local partition is added to partition list by default.
2. The IFileIO is switched to the local version if the partition data
presents at local during a query.

--- a/roxie/ccd/CMakeLists.txt
+++ b/roxie/ccd/CMakeLists.txt
@@ -125,11 +125,11 @@ IF (USE_TBBMALLOC)
    target_link_libraries ( ccd ${TBBMALLOC_LIBRARIES})
 ENDIF()
 
+if (ELASTIC_ENABLED)
+ADD_DEFINITIONS( -DELASTIC_ENABLED )
+endif()
 if (ELASTIC_DATA_DOWNLOAD_ALL)
   ADD_DEFINITIONS( -DELASTIC_DATA_DOWNLOAD_ALL )
-endif()
-if (ELASTIC_DATA_DOWNLOAD_NONE)
-  ADD_DEFINITIONS( -DELASTIC_DATA_DOWNLOAD_NONE )
 endif()
 
 
